feat: MeilisearchにIndexするノートの範囲を設定できるように

--- a/.config/example.yml
+++ b/.config/example.yml
@@ -104,6 +104,7 @@ redis:
 #  apiKey: ''
 #  ssl: true
 #  index: ''
+#  scope: local
 
 #   ┌───────────────┐
 #───┘ ID generation └───────────────────────────────────────────
