--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey",
-	"version": "13.14.2",
+	"version": "13.14.2-io",
 	"codename": "nasubi",
 	"repository": {
 		"type": "git",
