--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -33,8 +33,9 @@
 			"node"
 		],
 		"typeRoots": [
-			"./node_modules/@types",
-			"./src/@types"
+			"node_modules/@types",
+			"node_modules",
+			"@types"
 		],
 		"lib": [
 			"esnext"
