--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -77,6 +77,7 @@
 		"vuedraggable": "next"
 	},
 	"devDependencies": {
+		"@rollup/plugin-typescript": "^11.1.2",
 		"@storybook/addon-actions": "7.0.27",
 		"@storybook/addon-essentials": "7.0.27",
 		"@storybook/addon-interactions": "7.0.27",
