ドキュメント通りにした

--- a/packages/misskey-js/tsconfig.json
+++ b/packages/misskey-js/tsconfig.json
@@ -16,7 +16,7 @@
 		"noImplicitReturns": true,
 		"esModuleInterop": true,
 		"typeRoots": [
-			"node_modules/@types"
+			"./node_modules/@types"
 		],
 		"lib": [
 			"esnext",
