--- a/packages/sw/tsconfig.json
+++ b/packages/sw/tsconfig.json
@@ -24,8 +24,8 @@
 			"@/*": ["./src/*"]
 		},
 		"typeRoots": [
-			"node_modules/@types",
-			"@types"
+			"./node_modules/@types",
+			"./src/@types"
 		],
 		"lib": [
 			"esnext",
