--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -26,10 +26,10 @@
 			"@/*": ["./src/*"]
 		},
 		"typeRoots": [
-			"node_modules/@types",
-			"node_modules/@vue-macros",
-			"node_modules",
-			"@types"
+			"./src/@types",
+			"./node_modules/@types",
+			"./node_modules/@vue-macros",
+			"./node_modules",
 		],
 		"types": [
 			"vite/client",
