--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -26,7 +26,7 @@
 			"@/*": ["./src/*"]
 		},
 		"typeRoots": [
-			"./src/@types",
+			"./@types",
 			"./node_modules/@types",
 			"./node_modules/@vue-macros",
 			"./node_modules",
