--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -74,6 +74,7 @@
 		"@nestjs/core": "10.1.0",
 		"@nestjs/testing": "10.1.0",
 		"@peertube/http-signature": "1.7.0",
+		"@simplewebauthn/server": "^7.4.0",
 		"@sinonjs/fake-timers": "10.3.0",
 		"@swc/cli": "0.1.62",
 		"@swc/core": "1.3.70",
@@ -163,6 +164,7 @@
 	},
 	"devDependencies": {
 		"@jest/globals": "29.6.1",
+		"@simplewebauthn/typescript-types": "^7.4.0",
 		"@swc/jest": "0.2.26",
 		"@types/accepts": "1.3.5",
 		"@types/archiver": "5.3.2",
