Docker で node にシグナルが渡されるようにする

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
 		"build": "pnpm build-pre && pnpm -r build && pnpm gulp",
 		"build-storybook": "pnpm --filter frontend build-storybook",
 		"start": "pnpm check:connect && cd packages/backend && node ./built/boot/index.js",
+		"start:docker": "pnpm check:connect && cd packages/backend && exec node ./built/boot/index.js",
 		"start:test": "cd packages/backend && cross-env NODE_ENV=test node ./built/boot/index.js",
 		"init": "pnpm migrate",
 		"migrate": "cd packages/backend && pnpm migrate",
 		"check:connect": "cd packages/backend && pnpm check:connect",
 		"migrateandstart": "pnpm migrate && pnpm start",
+		"migrateandstart:docker": "pnpm migrate && exec pnpm start:docker",
 		"gulp": "pnpm exec gulp build",
 		"watch": "pnpm dev",
 		"dev": "node ./scripts/dev.mjs",
